--- a/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid pt-5">
+<div class="container-fluid pt-5" *ngIf="generalContent">
   <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
   </app-section-title>
 
@@ -31,7 +31,7 @@
             <h4 class="title-underlined">Details</h4>
 
             <div class="form-group row">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
                 <mat-label>Titel</mat-label>
                 <input matInput id="title" placeholder="Titel" name="title" [(ngModel)]="painting.title"
                   [disabled]="formDisabled" #title="ngModel" required />
@@ -39,7 +39,7 @@
                   Titel is <strong>verplicht</strong>
                 </mat-error>
               </mat-form-field>
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
                 <mat-label>Kunstenaar</mat-label>
                 <input matInput id="artist" placeholder="Kunstenaar" name="artist" [(ngModel)]="painting.artist"
                   [disabled]="formDisabled" #artist="ngModel" required />
@@ -50,23 +50,11 @@
             </div>
 
             <div class="form-group row">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
-                <mat-label>Omschrijving</mat-label>
-                <textarea matInput id="description" placeholder="Omschrijving" name="description"
-                  [(ngModel)]="painting.description" [disabled]="formDisabled" #description="ngModel"
-                  required></textarea>
-                <mat-error [hidden]="description.valid || description.pristine">
-                  Omschrijving is <strong>verplicht</strong>
-                </mat-error>
-              </mat-form-field>
-            </div>
-
-            <div class="form-group row">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
                 <mat-label>Verf</mat-label>
                 <mat-select id="paint" name="paint" [(ngModel)]="painting.paint" [disabled]="formDisabled"
                   #paint="ngModel" required>
-                  <mat-option *ngFor="let paint of paints" [value]="paint">
+                  <mat-option *ngFor="let paint of generalContent.paintingPaints" [value]="paint">
                     {{ paint }}
                   </mat-option>
                 </mat-select>
@@ -74,11 +62,11 @@
                   Verf is <strong>verplicht</strong>
                 </mat-error>
               </mat-form-field>
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
                 <mat-label>Materiaal</mat-label>
                 <mat-select id="material" name="material" [(ngModel)]="painting.material" [disabled]="formDisabled"
                   #material="ngModel" required>
-                  <mat-option *ngFor="let material of materials" [value]="material">
+                  <mat-option *ngFor="let material of generalContent.paintingMaterials" [value]="material">
                     {{ material }}
                   </mat-option>
                 </mat-select>
@@ -89,11 +77,11 @@
             </div>
 
             <div class="form-group row">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
                 <mat-label>Categorie</mat-label>
                 <mat-select id="category" name="category" [(ngModel)]="painting.category" [disabled]="formDisabled"
                   #category="ngModel" required>
-                  <mat-option *ngFor="let category of categories" [value]="category">
+                  <mat-option *ngFor="let category of generalContent.paintingCategories" [value]="category">
                     {{ category }}
                   </mat-option>
                 </mat-select>
@@ -101,11 +89,11 @@
                   Categorie is <strong>verplicht</strong>
                 </mat-error>
               </mat-form-field>
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
                 <mat-label>Status</mat-label>
                 <mat-select id="state" name="state" [(ngModel)]="painting.status" [disabled]="formDisabled"
                   #state="ngModel" required>
-                  <mat-option *ngFor="let state of states" [value]="state">
+                  <mat-option *ngFor="let state of generalContent.paintingStates" [value]="state">
                     {{ state }}
                   </mat-option>
                 </mat-select>
@@ -116,21 +104,31 @@
             </div>
 
             <div class="form-group row">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
                 <mat-label>Prijs</mat-label>
                 <input matInput id="price" placeholder="Prijs" name="price" [(ngModel)]="painting.price"
                   [disabled]="formDisabled" #price="ngModel" />
               </mat-form-field>
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-3">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-3">
                 <mat-label>Lengte</mat-label>
                 <input matInput id="length" placeholder="Lengte" name="length" [(ngModel)]="painting.length"
                   [disabled]="formDisabled" #length="ngModel" />
               </mat-form-field>
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-3">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-3">
                 <mat-label>Breedte</mat-label>
                 <input matInput id="width" placeholder="Breedte" name="width" [(ngModel)]="painting.width"
                   [disabled]="formDisabled" #width="ngModel" />
               </mat-form-field>
+            </div>
+
+            <div class="form-group row">
+              <div class="col-12">
+                <div class="NgxEditor__Wrapper">
+                  <ngx-editor-menu [editor]="editor"> </ngx-editor-menu>
+                  <ngx-editor [editor]="editor" [ngModel]="editorOutput" [placeholder]="'Omschrijving...'" name="editorOutput" (ngModelChange)="onEditorContentChange($event)">
+                  </ngx-editor>
+                </div>
+              </div>
             </div>
 
             <!-- Actions -->
