--- a/angular-web-app/src/app/components/_pages/portfolio/portfolio.component.html
+++ b/angular-web-app/src/app/components/_pages/portfolio/portfolio.component.html
@@ -12,7 +12,7 @@
     </app-section-title>
 
     <!-- Gallery -->
-    <app-gallery></app-gallery>
+    <app-gallery [generalContent]="generalContent"></app-gallery>
 
   </section>
 
