--- a/angular-web-app/src/app/components/info-card/info-card.component.html
+++ b/angular-web-app/src/app/components/info-card/info-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="mat-elevation-z8 p-3 m-2">
+<mat-card class="{{elevation}} p-3 m-2">
   <div class="d-flex flex-column">
     <div class="d-flex flex-row align-items-center justify-content-between mb-1">
       <div class="card-info-icon bg-primary d-flex align-items-center justify-content-center mat-elevation-z0">
