--- a/angular-web-app/src/app/components/_admin/manager-users/manager-users.component.html
+++ b/angular-web-app/src/app/components/_admin/manager-users/manager-users.component.html
@@ -1,52 +1,52 @@
 <div class="container-fluid pt-5">
-    <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
-    </app-section-title>
+  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
+  </app-section-title>
 
-    <div class="row mb-4">
-        <div class="col-12">
-            <mat-card class="mat-elevation-z8">
-                <h4 class="title-underlined">Toevoegen</h4>
-                <form (ngSubmit)="onSubmit()" #signUpForm="ngForm">
-                    <div class="form-group">
-                        <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="w-100">
-                            <mat-label>E-mail</mat-label>
-                            <input matInput type="text" placeholder="info@spavento.com" [(ngModel)]="form.email"
-                                name="email" id="email" #emailInput="ngModel" required />
-                            <mat-error [hidden]="emailInput.valid || emailInput.pristine">
-                                Email is <strong>verplicht</strong>
-                            </mat-error>
-                        </mat-form-field>
-                    </div>
+  <div class="row mb-4">
+    <div class="col-12">
+      <mat-card class="mat-elevation-z8">
+        <h4 class="title-underlined">Toevoegen</h4>
+        <form (ngSubmit)="onSubmit()" #signUpForm="ngForm">
+          <div class="form-group">
+            <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="w-100">
+              <mat-label>E-mail</mat-label>
+              <input matInput type="text" placeholder="info@spavento.com" [(ngModel)]="form.email" name="email"
+                id="email" #emailInput="ngModel" required />
+              <mat-error [hidden]="emailInput.valid || emailInput.pristine">
+                Email is <strong>verplicht</strong>
+              </mat-error>
+            </mat-form-field>
+          </div>
 
-                    <div class="form-group">
-                        <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="w-100">
-                            <mat-label>Wachtwoord</mat-label>
-                            <input matInput type="password" placeholder="Wachtwoord" [(ngModel)]="form.password"
-                                name="password" id="password" #passwordInput="ngModel" required />
-                            <mat-error  [hidden]="passwordInput.valid || passwordInput.pristine">
-                                Wachtwoord is <strong>verplicht</strong>
-                            </mat-error>
-                        </mat-form-field>
-                    </div>
+          <div class="form-group">
+            <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="w-100">
+              <mat-label>Wachtwoord</mat-label>
+              <input matInput type="password" placeholder="Wachtwoord" [(ngModel)]="form.password" name="password"
+                id="password" #passwordInput="ngModel" required />
+              <mat-error [hidden]="passwordInput.valid || passwordInput.pristine">
+                Wachtwoord is <strong>verplicht</strong>
+              </mat-error>
+            </mat-form-field>
+          </div>
 
-                    <div class="form-group">
-                        <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="w-100">
-                            <mat-label>Bevestig wachtwoord</mat-label>
-                            <input matInput type="password" placeholder="Wachtwoord" [(ngModel)]="form.confirmPassword"
-                                name="confirmPassword" id="confirmPassword" #confirmPasswordInput="ngModel" required />
-                            <mat-hint  [hidden]="form.password == form.confirmPassword">
-                                Wachtwoorden komen niet overeen
-                            </mat-hint>
-                        </mat-form-field>
-                    </div>
+          <div class="form-group">
+            <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="w-100">
+              <mat-label>Bevestig wachtwoord</mat-label>
+              <input matInput type="password" placeholder="Wachtwoord" [(ngModel)]="form.confirmPassword"
+                name="confirmPassword" id="confirmPassword" #confirmPasswordInput="ngModel" required />
+              <mat-hint [hidden]="form.password == form.confirmPassword">
+                Wachtwoorden komen niet overeen
+              </mat-hint>
+            </mat-form-field>
+          </div>
 
-                    <button mat-raised-button color="accent" type="submit"
-                        [disabled]="!signUpForm.form.valid || passwordInput.value != confirmPasswordInput.value">
-                        Toevoegen
-                    </button>
+          <button mat-raised-button color="accent" type="submit"
+            [disabled]="!signUpForm.form.valid || passwordInput.value != confirmPasswordInput.value">
+            Toevoegen
+          </button>
 
-                </form>
-            </mat-card>
-        </div>
+        </form>
+      </mat-card>
     </div>
+  </div>
 </div>
