--- a/angular-web-app/src/app/components/_admin/news-overview/news-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/news-overview/news-overview.component.html
@@ -28,12 +28,12 @@
         <div class="table-responsive">
           <table mat-table [dataSource]="dataSource" class="w-100" matSort matSortActive="created"
             matSortDirection="desc">
-            <ng-container matColumnDef="image" sticky>
+            <!-- <ng-container matColumnDef="image" sticky>
               <th mat-header-cell *matHeaderCellDef> Afbeelding </th>
               <td mat-cell *matCellDef="let item">
                 <img [src]="item.image" class="rounded img-table mat-elevation-z2">
               </td>
-            </ng-container>
+            </ng-container> -->
 
             <ng-container matColumnDef="title">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Titel </th>
@@ -55,8 +55,13 @@
               <td mat-cell *matCellDef="let item"> {{ item.timestampCreated | date }} </td>
             </ng-container>
 
+            <ng-container matColumnDef="updated">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Bewerkt </th>
+              <td mat-cell *matCellDef="let item"> {{ item.timestampUpdated | date }} </td>
+            </ng-container>
+
             <ng-container matColumnDef="active">
-              <th mat-header-cell *matHeaderCellDef> Actief </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Actief </th>
               <td mat-cell *matCellDef="let item">
                 <mat-slide-toggle [checked]="item.active" (change)="setActiveState(item , $event)"></mat-slide-toggle>
               </td>
@@ -131,8 +136,7 @@
       </div>
 
       <div class="row mt-5">
-        <div class="col-12">
-          <p>{{ modalItem.text }}</p>
+        <div class="col-12" [innerHTML]="modalItem.text">
         </div>
       </div>
     </div>
