--- a/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
@@ -46,18 +46,18 @@
               <td mat-cell *matCellDef="let painting"> {{ painting.artist }} </td>
             </ng-container>
 
-            <ng-container matColumnDef="paint">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Verf </th>
-              <td mat-cell *matCellDef="let painting"> {{ painting.paint }} </td>
-            </ng-container>
-
             <ng-container matColumnDef="created">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Toegevoegd </th>
               <td mat-cell *matCellDef="let painting"> {{ painting.timestampCreated | date }} </td>
             </ng-container>
 
+            <ng-container matColumnDef="updated">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Bewerkt </th>
+              <td mat-cell *matCellDef="let painting"> {{ painting.timestampUpdated | date }} </td>
+            </ng-container>
+
             <ng-container matColumnDef="active">
-              <th mat-header-cell *matHeaderCellDef> Actief </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Actief </th>
               <td mat-cell *matCellDef="let painting">
                 <mat-slide-toggle [checked]="painting.active" (change)="setActiveState(painting , $event)"></mat-slide-toggle>
               </td>
