--- a/angular-web-app/src/app/components/_pages/contact/contact.component.html
+++ b/angular-web-app/src/app/components/_pages/contact/contact.component.html
@@ -2,7 +2,7 @@
 <app-header *ngIf="pageTitle" [title]="pageTitle.title" [subTitle]="pageTitle.subTitle" [small]="true"></app-header>
 
 <!-- Main -->
-<main id="contact" class="main main-raised">
+<main id="contact" class="main main-raised" *ngIf="generalContent">
   <!-- Contact -->
   <section *ngIf="contactCards" class="page-section bg-light">
     <app-section-title [title]="contactCards.title" [subTitle]="contactCards.subTitle" [text]="contactCards.text">
@@ -11,7 +11,7 @@
       <div class="row">
         <div *ngFor="let contactcard of contactCards.services" class="col-lg-4 col-md-6 col-sm-12">
           <!-- Service cards -->
-          <app-service-card [service]="contactcard"></app-service-card>
+          <app-service-card [service]="contactcard" [elevation]="generalContent.cardElevation"></app-service-card>
         </div>
       </div>
     </div>
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <app-contact-card></app-contact-card>
+          <app-contact-card [generalContent]="generalContent"></app-contact-card>
         </div>
       </div>
     </div>
