--- a/angular-web-app/src/app/components/_pages/home/home.component.html
+++ b/angular-web-app/src/app/components/_pages/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <app-header *ngIf="pageTitle" [title]="pageTitle.title" [subTitle]="pageTitle.subTitle" [small]="false"></app-header>
 
-<main id="home" class="main main-raised">
+<main id="home" class="main main-raised" *ngIf="generalContent">
   <!-- Services -->
   <section *ngIf="services && services.active" class="page-section bg-light">
     <app-section-title [title]="services.title" [subTitle]="services.subTitle" [text]="services.text">
@@ -10,7 +10,7 @@
       <div class="row">
         <div *ngFor="let service of services.services" class="col-lg-4 col-md-6 col-sm-12">
           <!-- Service cards -->
-          <app-service-card [service]="service"></app-service-card>
+          <app-service-card [service]="service" [elevation]="generalContent.cardElevation"></app-service-card>
         </div>
       </div>
     </div>
@@ -23,12 +23,9 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <div class="featured-item-wrapper">
-            <div [ngStyle]="{'height': featured.maxHeight}" class="featured-item mat-elevation-z8">
-              <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight">
-              </app-painting-card>
-            </div>
-          </div>
+          <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight" [height]="'min-content'"
+            [elevation]="generalContent.cardElevation">
+          </app-painting-card>
         </div>
       </div>
     </div>
@@ -41,7 +38,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <app-latest-news></app-latest-news>
+          <app-latest-news [generalContent]="generalContent"></app-latest-news>
         </div>
       </div>
     </div>
@@ -54,7 +51,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <app-latest></app-latest>
+          <app-latest [generalContent]="generalContent"></app-latest>
         </div>
       </div>
     </div>
