--- a/angular-web-app/src/app/components/_pages/news/news.component.html
+++ b/angular-web-app/src/app/components/_pages/news/news.component.html
@@ -8,7 +8,7 @@
     <app-section-title [title]="newsContent.title" [subTitle]="newsContent.subTitle" [text]="newsContent.text">
     </app-section-title>
 
-    <div class="container" *ngIf="newsItems">
+    <div class="container" *ngIf="newsItems && generalContent">
       <!-- Filters -->
       <div id="filterRow" class="row">
         <div class="col-12 d-flex align-items-center justify-content-center flex-wrap">
@@ -35,7 +35,7 @@
       <!-- News items -->
       <div id="resultsContainer" class="results-container row my-4" *ngIf="filteredNewsItems">
         <app-news-card *ngFor="let item of filteredNewsItems" class="col-12 my-3" @fadeAnimation [newsItem]="item"
-          [attr.data-category]="item.category">
+          [elevation]="generalContent.cardElevation" [attr.data-category]="item.category">
         </app-news-card>
       </div>
     </div>
