--- a/angular-web-app/src/app/components/contact-card/contact-card.component.html
+++ b/angular-web-app/src/app/components/contact-card/contact-card.component.html
@@ -1,12 +1,12 @@
 <!-- Card-->
-<mat-card>
+<mat-card *ngIf="generalContent" class="{{generalContent.cardElevation}}">
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
         <div [hidden]="submitted" class="w-100">
           <form (ngSubmit)="onSubmit()" #contactForm="ngForm">
             <div class="form-group">
-              <mat-form-field appearance="{{ appearance }}" color="{{ color }}" class="w-100">
+              <mat-form-field appearance="{{ generalContent.formStyle }}" color="{{ generalContent.formColor }}" class="w-100">
                 <mat-label>Naam</mat-label>
                 <input matInput type="text" [(ngModel)]="model.name" name="name" id="name" #name="ngModel" required />
                 <mat-error [hidden]="name.valid || name.pristine">
@@ -16,7 +16,7 @@
             </div>
 
             <div class="form-group">
-              <mat-form-field appearance="{{ appearance }}" color="{{ color }}" class="w-100">
+              <mat-form-field appearance="{{ generalContent.formStyle }}" color="{{ generalContent.formColor }}" class="w-100">
                 <mat-label>Email</mat-label>
                 <input matInput type="email" placeholder="info@example.com" [(ngModel)]="model.email" name="email"
                   id="email" #email="ngModel" required />
@@ -26,11 +26,11 @@
               </mat-form-field>
             </div>
 
-            <div class="form-group">
-              <mat-form-field appearance="{{ appearance }}" color="{{ color }}" class="w-100">
+            <div class="form-group" *ngIf="generalContent && generalContent.contactformCategories">
+              <mat-form-field appearance="{{ generalContent.formStyle }}" color="{{ generalContent.formColor }}" class="w-100">
                 <mat-label>Onderwerp</mat-label>
                 <mat-select [(ngModel)]="model.subject" name="subject" id="subject" #subject="ngModel" required>
-                  <mat-option *ngFor="let subject of subjects" [value]="subject">{{ subject }}</mat-option>
+                  <mat-option *ngFor="let subject of generalContent.contactformCategories" [value]="subject">{{ subject }}</mat-option>
                 </mat-select>
                 <mat-error [hidden]="subject.valid || subject.pristine">
                   Onderwerp is <strong>verplicht</strong>
@@ -39,7 +39,7 @@
             </div>
 
             <div class="form-group">
-              <mat-form-field appearance="{{ appearance }}" color="{{ color }}" class="w-100">
+              <mat-form-field appearance="{{ generalContent.formStyle }}" color="{{ generalContent.formColor }}" class="w-100">
                 <mat-label>Bericht</mat-label>
                 <textarea matInput [(ngModel)]="model.text" name="text" id="text" #text="ngModel" required></textarea>
                 <mat-error [hidden]="text.valid || text.pristine">
