--- a/angular-web-app/src/app/components/painting-card/painting-card.component.scss
+++ b/angular-web-app/src/app/components/painting-card/painting-card.component.scss
@@ -1,9 +1,9 @@
 @import "../../../variables";
 
 .painting-card {
-  width: 100%;
+  margin: 15px;
+  width: calc(100% - 30px);
   overflow: hidden;
-  box-shadow: none !important;
 }
 
 .painting-card-img {
